--- a/jurlMapping-webapp/pom.xml
+++ b/jurlMapping-webapp/pom.xml
@@ -14,6 +14,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
