--- a/jurlMapping-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jurlMapping-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,18 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Archetype Created Web Application</display-name>
+
+    <filter>
+        <filter-name>DispatchFilter</filter-name>
+        <filter-class>com.babyduncan.MyDispatchFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>DispatchFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
