--- a/jurlmapping/pom.xml
+++ b/jurlmapping/pom.xml
@@ -21,6 +21,11 @@
             <version>2.5</version>
         </dependency>
         <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.2</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
